[gd_scene load_steps=48 format=3 uid="uid://cspsfyf0b2txa"]

[ext_resource type="Script" path="res://scenes/drink_station/liquid_station.gd" id="1_p4uih"]
[ext_resource type="Script" path="res://scenes/drink_station/milk.gd" id="4_t0iax"]
[ext_resource type="Script" path="res://scenes/drink_station/cup.gd" id="6_68ikd"]
[ext_resource type="Script" path="res://scenes/drink_station/tea.gd" id="9_1upol"]
[ext_resource type="Texture2D" uid="uid://74gmr84m12k3" path="res://assets/liquid_station/assets/tea_container.png" id="9_lhlql"]
[ext_resource type="Texture2D" uid="uid://rld0v7fg280q" path="res://assets/liquid_station/assets/tea_nozzle_norm.png" id="10_ykvc5"]
[ext_resource type="Texture2D" uid="uid://b0lb4fndwpn38" path="res://assets/liquid_station/assets/tea_nozzle_down.png" id="11_lqjrf"]
[ext_resource type="Texture2D" uid="uid://26n3xfp856d1" path="res://assets/liquid_station/assets/fridge_closed.png" id="12_0otd3"]
[ext_resource type="Texture2D" uid="uid://bee8e7v1r8ax4" path="res://assets/liquid_station/assets/coffee_nozzle_norm.png" id="12_kvpxp"]
[ext_resource type="Texture2D" uid="uid://l43pqvu43upd" path="res://assets/liquid_station/assets/coffee_nozzle_down.png" id="13_3yeq2"]
[ext_resource type="Texture2D" uid="uid://d3nshuiqio30k" path="res://assets/liquid_station/assets/background.png" id="13_8b6s5"]
[ext_resource type="Script" path="res://scenes/drink_station/fridge.gd" id="13_ay75l"]
[ext_resource type="Texture2D" uid="uid://b41ak5nosuxyo" path="res://assets/liquid_station/assets/fridge_open.png" id="14_dxkqo"]
[ext_resource type="Script" path="res://scenes/drink_station/coffee.gd" id="14_sdbwb"]
[ext_resource type="Texture2D" uid="uid://jastphwwwg00" path="res://assets/liquid_station/assets/fridge_semiopen.png" id="14_ulmdc"]
[ext_resource type="Texture2D" uid="uid://yxp224hvvgxa" path="res://assets/liquid_station/assets/coffee_container.png" id="15_rw11m"]
[ext_resource type="Texture2D" uid="uid://bc4d8sl6v755m" path="res://assets/liquid_station/assets/front_cup.png" id="16_it5lc"]
[ext_resource type="Script" path="res://scenes/drink_station/smoothie.gd" id="17_rhxvo"]
[ext_resource type="Texture2D" uid="uid://21cd7rwmx4u3" path="res://assets/liquid_station/assets/back_cup.png" id="17_yy1ah"]
[ext_resource type="Texture2D" uid="uid://bvw8gc7q4yu01" path="res://assets/liquid_station/assets/smoothie_container.png" id="18_rga2s"]
[ext_resource type="Texture2D" uid="uid://glunx2udyoje" path="res://assets/liquid_station/assets/smoothie_nozzle_norm.png" id="19_s0ohr"]
[ext_resource type="Texture2D" uid="uid://cb5q32768nk2s" path="res://assets/liquid_station/assets/smoothie_nozzle_down.png" id="20_hgr5q"]
[ext_resource type="Texture2D" uid="uid://dcege7trhmgrl" path="res://assets/liquid_station/assets/milk_still.png" id="23_3q5kg"]
[ext_resource type="Texture2D" uid="uid://bowlp63mrvm1" path="res://assets/liquid_station/animations/milk-animation/milk1.png" id="24_oass6"]
[ext_resource type="Texture2D" uid="uid://dtbhaxgi3dfn4" path="res://assets/liquid_station/animations/milk-animation/milk2.png" id="25_kocgj"]
[ext_resource type="Script" path="res://scenes/drink_station/oat_milk.gd" id="26_dee6e"]
[ext_resource type="Texture2D" uid="uid://djvtujhoyqrbd" path="res://assets/liquid_station/animations/milk-animation/milk3.png" id="26_jjmtj"]
[ext_resource type="Texture2D" uid="uid://co0tmv6jovvjv" path="res://assets/liquid_station/assets/oat-milk-still.png" id="27_8b3bb"]
[ext_resource type="Texture2D" uid="uid://7b2oxm52g6lm" path="res://assets/liquid_station/animations/oat-milk-animation/oat1.png" id="28_8rug6"]
[ext_resource type="Texture2D" uid="uid://bfhoj7ar02ods" path="res://assets/liquid_station/animations/oat-milk-animation/oat2.png" id="29_ft0m0"]
[ext_resource type="Texture2D" uid="uid://cnwykukjwyk71" path="res://assets/liquid_station/animations/oat-milk-animation/oat3.png" id="30_3hbfx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4hdd"]
size = Vector2(698, 823.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wx7pv"]
size = Vector2(354, 487.883)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dphaq"]
size = Vector2(334, 481.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lc8p1"]
size = Vector2(546.544, 395.994)

[sub_resource type="SpriteFrames" id="SpriteFrames_36dq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ykvc5")
}, {
"duration": 15.0,
"texture": ExtResource("11_lqjrf")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h640a"]
size = Vector2(95.765, 121.289)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mawh3"]
size = Vector2(551.251, 394.375)

[sub_resource type="SpriteFrames" id="SpriteFrames_y4w8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_kvpxp")
}, {
"duration": 15.0,
"texture": ExtResource("13_3yeq2")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2p13q"]
size = Vector2(124, 80.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2gpp"]
size = Vector2(579.807, 392.072)

[sub_resource type="SpriteFrames" id="SpriteFrames_p2ufx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_s0ohr")
}, {
"duration": 20.0,
"texture": ExtResource("20_hgr5q")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsfi2"]
size = Vector2(121, 82.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_457jg"]
size = Vector2(551.763, 926.427)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxd5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_3q5kg")
}],
"loop": true,
"name": &"milk",
"speed": 1.0
}, {
"frames": [],
"loop": false,
"name": &"pouring_milk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_oass6")
}, {
"duration": 1.0,
"texture": ExtResource("25_kocgj")
}, {
"duration": 1.0,
"texture": ExtResource("26_jjmtj")
}, {
"duration": 1.0,
"texture": ExtResource("24_oass6")
}, {
"duration": 1.0,
"texture": ExtResource("25_kocgj")
}, {
"duration": 1.0,
"texture": ExtResource("26_jjmtj")
}, {
"duration": 1.0,
"texture": ExtResource("24_oass6")
}, {
"duration": 1.0,
"texture": ExtResource("25_kocgj")
}],
"loop": false,
"name": &"pouring_milk_right",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahek8"]
size = Vector2(348.596, 818.667)

[sub_resource type="SpriteFrames" id="SpriteFrames_rck20"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_8rug6")
}, {
"duration": 1.0,
"texture": ExtResource("29_ft0m0")
}, {
"duration": 1.0,
"texture": ExtResource("30_3hbfx")
}, {
"duration": 1.0,
"texture": ExtResource("28_8rug6")
}, {
"duration": 1.0,
"texture": ExtResource("29_ft0m0")
}, {
"duration": 1.0,
"texture": ExtResource("30_3hbfx")
}, {
"duration": 1.0,
"texture": ExtResource("28_8rug6")
}, {
"duration": 1.0,
"texture": ExtResource("29_ft0m0")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[node name="liquid_station" type="Node2D"]
position = Vector2(581, 343)
scale = Vector2(0.45407, 0.425592)
script = ExtResource("1_p4uih")

[node name="Back" type="Button" parent="."]
offset_left = -1231.0
offset_top = 479.0
offset_right = -921.0
offset_bottom = 667.0
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="."]
offset_left = 866.0
offset_top = 508.0
offset_right = 1115.0
offset_bottom = 676.0
text = "Next"
metadata/_edit_use_anchors_ = true

[node name="fridge" type="Node2D" parent="."]
script = ExtResource("13_ay75l")

[node name="fridge_area" type="Area2D" parent="fridge"]
position = Vector2(706, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="fridge/fridge_area"]
position = Vector2(16, -44)
shape = SubResource("RectangleShape2D_l4hdd")

[node name="FridgeClosed" type="Sprite2D" parent="fridge"]
visible = false
z_index = 2
position = Vector2(728.17, -54.71)
scale = Vector2(1.06, 1.06)
texture = ExtResource("12_0otd3")

[node name="FridgeOpen" type="Sprite2D" parent="fridge"]
z_index = -2
position = Vector2(728.17, -55.71)
scale = Vector2(1.06, 1.06)
texture = ExtResource("14_dxkqo")
metadata/_edit_lock_ = true

[node name="FridgeSemiopen" type="Sprite2D" parent="fridge"]
visible = false
z_index = 2
position = Vector2(726.17, -56.71)
scale = Vector2(1.06, 1.06)
texture = ExtResource("14_ulmdc")

[node name="cup" type="Node2D" parent="."]
z_index = 90
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("6_68ikd")

[node name="cup_spot" type="StaticBody2D" parent="cup" groups=["cup_drop", "droppable"]]
position = Vector2(0, 1)

[node name="cup_spot_collision" type="CollisionShape2D" parent="cup/cup_spot"]
position = Vector2(3, 436)
shape = SubResource("RectangleShape2D_wx7pv")
one_way_collision_margin = 0.0

[node name="cup_sprite" type="Node2D" parent="cup"]
position = Vector2(15, 321)

[node name="FrontCup" type="Sprite2D" parent="cup/cup_sprite"]
z_index = 10
position = Vector2(-13, 99)
scale = Vector2(0.641872, 0.641872)
texture = ExtResource("16_it5lc")

[node name="BackCup" type="Sprite2D" parent="cup/cup_sprite"]
z_index = 2
position = Vector2(-12, 100)
scale = Vector2(0.642054, 0.642054)
texture = ExtResource("17_yy1ah")

[node name="cup_pick_up" type="Area2D" parent="cup/cup_sprite"]
position = Vector2(-14, -320)

[node name="cup_pick_up_collision" type="CollisionShape2D" parent="cup/cup_sprite/cup_pick_up"]
position = Vector2(1.20243, 438.388)
shape = SubResource("RectangleShape2D_dphaq")

[node name="Liquid Types" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 3.0
offset_bottom = 2.0
metadata/_edit_use_anchors_ = true

[node name="tea" type="Node2D" parent="Liquid Types"]
rotation = 0.155301
script = ExtResource("9_1upol")

[node name="TeaContainer" type="Sprite2D" parent="Liquid Types/tea"]
z_index = 1
position = Vector2(-1010.53, -186.325)
rotation = -0.155301
scale = Vector2(0.79957, 0.79957)
texture = ExtResource("9_lhlql")

[node name="tea static body" type="StaticBody2D" parent="Liquid Types/tea/TeaContainer" groups=["tea-droppable"]]
position = Vector2(-7.50415, 47.5255)

[node name="tea collission" type="CollisionShape2D" parent="Liquid Types/tea/TeaContainer/tea static body" groups=["tea-droppable"]]
position = Vector2(2.56189, -19.151)
shape = SubResource("RectangleShape2D_lc8p1")

[node name="tea nozzle" type="Node2D" parent="Liquid Types/tea"]

[node name="TeaNozzleNorm" type="Sprite2D" parent="Liquid Types/tea/tea nozzle"]
z_index = 3
position = Vector2(-976.269, 37.409)
rotation = -0.174533
scale = Vector2(0.495283, 0.495283)
texture = ExtResource("10_ykvc5")

[node name="tea nozzle down" type="AnimatedSprite2D" parent="Liquid Types/tea/tea nozzle"]
z_index = 1
position = Vector2(-976.269, 37.409)
rotation = -0.174533
scale = Vector2(0.473615, 0.473615)
sprite_frames = SubResource("SpriteFrames_36dq1")

[node name="nozzle area" type="Area2D" parent="Liquid Types/tea/tea nozzle" groups=["tea-nozzle"]]
position = Vector2(0.154675, 0.987965)

[node name="nozzle collision" type="CollisionShape2D" parent="Liquid Types/tea/tea nozzle/nozzle area"]
z_index = 3
position = Vector2(-983.289, -2.9427)
rotation = -1.72858
scale = Vector2(0.880101, 1)
shape = SubResource("RectangleShape2D_h640a")

[node name="coffee" type="Node2D" parent="Liquid Types"]
position = Vector2(2.08165e-12, 0)
script = ExtResource("14_sdbwb")

[node name="CoffeeContainer" type="Sprite2D" parent="Liquid Types/coffee"]
z_index = 1
position = Vector2(-473.4, -333.2)
scale = Vector2(0.8, 0.8)
texture = ExtResource("15_rw11m")

[node name="coffee static body" type="StaticBody2D" parent="Liquid Types/coffee/CoffeeContainer" groups=["coffee-droppable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Liquid Types/coffee/CoffeeContainer/coffee static body" groups=["coffee-droppable"]]
position = Vector2(4.875, 23.9999)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_mawh3")

[node name="coffee nozzle" type="Node2D" parent="Liquid Types/coffee"]
position = Vector2(0, 2)

[node name="coffee nozzle norm" type="Sprite2D" parent="Liquid Types/coffee/coffee nozzle"]
z_index = 1
position = Vector2(-480, -114)
scale = Vector2(0.495, 0.495)
texture = ExtResource("12_kvpxp")

[node name="coffee nozzle down" type="AnimatedSprite2D" parent="Liquid Types/coffee/coffee nozzle"]
z_index = 1
position = Vector2(-479, -113)
scale = Vector2(0.495, 0.495)
sprite_frames = SubResource("SpriteFrames_y4w8q")

[node name="nozzle area" type="Area2D" parent="Liquid Types/coffee/coffee nozzle" groups=["coffee-nozzle"]]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Liquid Types/coffee/coffee nozzle/nozzle area"]
z_index = 1
position = Vector2(-481, -157)
shape = SubResource("RectangleShape2D_2p13q")

[node name="smoothie" type="Node2D" parent="Liquid Types"]
script = ExtResource("17_rhxvo")

[node name="smoothie container" type="Sprite2D" parent="Liquid Types/smoothie"]
position = Vector2(19, -336)
scale = Vector2(0.783019, 0.783019)
texture = ExtResource("18_rga2s")

[node name="smoothie static" type="StaticBody2D" parent="Liquid Types/smoothie/smoothie container" groups=["smoothie-droppable"]]

[node name="smoothie collision" type="CollisionShape2D" parent="Liquid Types/smoothie/smoothie container/smoothie static" groups=["smoothie-droppable"]]
position = Vector2(-1.27711, 30.012)
shape = SubResource("RectangleShape2D_d2gpp")

[node name="smoothie nozzle" type="Node2D" parent="Liquid Types/smoothie"]

[node name="smoothie nozzle norm" type="Sprite2D" parent="Liquid Types/smoothie/smoothie nozzle"]
position = Vector2(23, -117)
scale = Vector2(0.495, 0.495)
texture = ExtResource("19_s0ohr")

[node name="smoothie nozzle down" type="AnimatedSprite2D" parent="Liquid Types/smoothie/smoothie nozzle"]
position = Vector2(23, -117)
scale = Vector2(0.495, 0.495)
sprite_frames = SubResource("SpriteFrames_p2ufx")

[node name="nozzle area" type="Area2D" parent="Liquid Types/smoothie/smoothie nozzle" groups=["smoothie-nozzle"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Liquid Types/smoothie/smoothie nozzle/nozzle area"]
position = Vector2(25.5, -157.25)
shape = SubResource("RectangleShape2D_qsfi2")

[node name="Milk Types" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 4.0
offset_bottom = 4.0
metadata/_edit_use_anchors_ = true

[node name="milk" type="Node2D" parent="Milk Types"]
script = ExtResource("4_t0iax")

[node name="milkSprite" type="Sprite2D" parent="Milk Types/milk"]
position = Vector2(883.124, -224.757)
scale = Vector2(0.398727, 0.380182)
texture = ExtResource("23_3q5kg")

[node name="milkArea" type="Area2D" parent="Milk Types/milk/milkSprite"]
position = Vector2(-4.23083, 16.6158)
scale = Vector2(0.900931, 0.960653)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Milk Types/milk/milkSprite/milkArea"]
position = Vector2(16.9575, -38.8179)
shape = SubResource("RectangleShape2D_457jg")

[node name="milk_animations" type="AnimatedSprite2D" parent="Milk Types/milk"]
visible = false
position = Vector2(863.303, -251.415)
scale = Vector2(0.399, 0.395)
sprite_frames = SubResource("SpriteFrames_bxd5m")
animation = &"pouring_milk_right"

[node name="oat milk" type="Node2D" parent="Milk Types"]
script = ExtResource("26_dee6e")

[node name="oatSprite" type="Sprite2D" parent="Milk Types/oat milk"]
position = Vector2(607.836, -202.072)
scale = Vector2(0.410198, 0.410198)
texture = ExtResource("27_8b3bb")

[node name="oatArea" type="Area2D" parent="Milk Types/oat milk/oatSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Milk Types/oat milk/oatSprite/oatArea"]
position = Vector2(-2.49414, -54.1891)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_ahek8")

[node name="oat_animations" type="AnimatedSprite2D" parent="Milk Types/oat milk"]
position = Vector2(572.599, -251.414)
scale = Vector2(0.41, 0.41)
sprite_frames = SubResource("SpriteFrames_rck20")
frame = 7
frame_progress = 1.0

[node name="background" type="TextureRect" parent="."]
z_index = -6
offset_left = -1274.0
offset_top = -804.0
offset_right = 1276.0
offset_bottom = 733.0
scale = Vector2(0.9966, 0.989153)
size_flags_horizontal = 4
texture = ExtResource("13_8b6s5")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -44.6437)
metadata/_edit_lock_ = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="input_event" from="fridge/fridge_area" to="fridge" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="fridge/fridge_area" to="fridge" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="fridge/fridge_area" to="fridge" method="_on_area_2d_mouse_exited"]
[connection signal="body_entered" from="cup/cup_sprite/cup_pick_up" to="cup" method="_on_cup_pick_up_body_entered"]
[connection signal="body_exited" from="cup/cup_sprite/cup_pick_up" to="cup" method="_on_cup_pick_up_body_exited"]
[connection signal="input_event" from="cup/cup_sprite/cup_pick_up" to="cup" method="_on_cup_pick_up_input_event"]
[connection signal="animation_finished" from="Liquid Types/tea/tea nozzle/tea nozzle down" to="cup" method="_on_tea_nozzle_down_animation_finished"]
[connection signal="animation_finished" from="Liquid Types/tea/tea nozzle/tea nozzle down" to="Liquid Types/tea" method="_on_tea_nozzle_down_animation_finished"]
[connection signal="input_event" from="Liquid Types/tea/tea nozzle/nozzle area" to="Liquid Types/tea" method="_on_nozzle_area_input_event"]
[connection signal="mouse_entered" from="Liquid Types/tea/tea nozzle/nozzle area" to="Liquid Types/tea" method="_on_nozzle_area_mouse_entered"]
[connection signal="mouse_exited" from="Liquid Types/tea/tea nozzle/nozzle area" to="Liquid Types/tea" method="_on_nozzle_area_mouse_exited"]
[connection signal="animation_finished" from="Liquid Types/coffee/coffee nozzle/coffee nozzle down" to="cup" method="_on_coffee_nozzle_down_animation_finished"]
[connection signal="animation_finished" from="Liquid Types/coffee/coffee nozzle/coffee nozzle down" to="Liquid Types/coffee" method="_on_coffee_nozzle_down_animation_finished"]
[connection signal="input_event" from="Liquid Types/coffee/coffee nozzle/nozzle area" to="Liquid Types/coffee" method="_on_nozzle_area_input_event"]
[connection signal="mouse_entered" from="Liquid Types/coffee/coffee nozzle/nozzle area" to="Liquid Types/coffee" method="_on_nozzle_area_mouse_entered"]
[connection signal="mouse_exited" from="Liquid Types/coffee/coffee nozzle/nozzle area" to="Liquid Types/coffee" method="_on_nozzle_area_mouse_exited"]
[connection signal="animation_finished" from="Liquid Types/smoothie/smoothie nozzle/smoothie nozzle down" to="cup" method="_on_smoothie_nozzle_down_animation_finished"]
[connection signal="animation_finished" from="Liquid Types/smoothie/smoothie nozzle/smoothie nozzle down" to="Liquid Types/smoothie" method="_on_smoothie_nozzle_down_animation_finished"]
[connection signal="input_event" from="Liquid Types/smoothie/smoothie nozzle/nozzle area" to="Liquid Types/smoothie" method="_on_nozzle_area_input_event"]
[connection signal="mouse_entered" from="Liquid Types/smoothie/smoothie nozzle/nozzle area" to="Liquid Types/smoothie" method="_on_nozzle_area_mouse_entered"]
[connection signal="mouse_exited" from="Liquid Types/smoothie/smoothie nozzle/nozzle area" to="Liquid Types/smoothie" method="_on_nozzle_area_mouse_exited"]
[connection signal="body_entered" from="Milk Types/milk/milkSprite/milkArea" to="Milk Types/milk" method="_on_milk_area_body_entered"]
[connection signal="body_exited" from="Milk Types/milk/milkSprite/milkArea" to="Milk Types/milk" method="_on_milk_area_body_exited"]
[connection signal="input_event" from="Milk Types/milk/milkSprite/milkArea" to="Milk Types/milk" method="_on_milk_area_input_event"]
[connection signal="animation_finished" from="Milk Types/milk/milk_animations" to="Milk Types/milk" method="_on_milk_animations_animation_finished"]
[connection signal="body_entered" from="Milk Types/oat milk/oatSprite/oatArea" to="Milk Types/oat milk" method="_on_oat_area_body_entered"]
[connection signal="body_exited" from="Milk Types/oat milk/oatSprite/oatArea" to="Milk Types/oat milk" method="_on_oat_area_body_exited"]
[connection signal="input_event" from="Milk Types/oat milk/oatSprite/oatArea" to="Milk Types/oat milk" method="_on_oat_area_input_event"]
[connection signal="animation_finished" from="Milk Types/oat milk/oat_animations" to="Milk Types/oat milk" method="_on_oat_animations_animation_finished"]
